--- a/frontend/control.html
+++ b/frontend/control.html
@@ -419,42 +419,41 @@
     @media (min-width: 600px) {
       .faculty-card {
         display: grid;
-        grid-template-columns: auto 200px auto auto;
-        grid-template-rows: auto auto;
+        grid-template-columns: auto 1fr auto auto;
         gap: 0.5rem 1rem;
-        align-items: center;
+        align-items: start;
       }
 
       .faculty-card label {
         grid-column: 1;
-        grid-row: 1 / 3;
+        grid-row: 1;
         margin-bottom: 0;
         white-space: nowrap;
-        align-self: start;
-        padding-top: 0.5rem;
+      }
+
+      /* Show room/batch info below the name */
+      .faculty-card label > div {
+        display: block !important;
+        white-space: normal;
+        margin-top: 0.25rem;
       }
 
       .faculty-card select {
         grid-column: 2;
-        grid-row: 1 / 3;
+        grid-row: 1;
         margin-bottom: 0;
       }
 
       .faculty-card .custom-expiry-btn-small {
         grid-column: 3;
-        grid-row: 1 / 3;
+        grid-row: 1;
         margin: 0;
       }
 
       .faculty-card button:last-child {
         grid-column: 4;
-        grid-row: 1 / 3;
+        grid-row: 1;
         margin-bottom: 0;
-      }
-
-      /* Remove the room/batch info from the label and style it separately */
-      .faculty-card label > div {
-        display: none;
       }
     }
 
