--- a/frontend/control.html
+++ b/frontend/control.html
@@ -420,40 +420,49 @@
       .faculty-card {
         display: grid;
         grid-template-columns: auto 1fr auto auto;
+        grid-template-rows: auto auto;
         gap: 0.5rem 1rem;
-        align-items: start;
+        align-items: center;
       }
 
       .faculty-card label {
         grid-column: 1;
-        grid-row: 1;
+        grid-row: 1 / 3;
         margin-bottom: 0;
-        white-space: nowrap;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.25rem;
       }
 
-      /* Show room/batch info below the name */
+      /* Room/batch info below the name */
       .faculty-card label > div {
-        display: block !important;
-        white-space: normal;
-        margin-top: 0.25rem;
+        font-size: 0.75em;
+        color: #6b7280;
+        margin-left: 2.5em; /* Align with name text */
+        white-space: pre-line;
+        line-height: 1.3;
       }
 
       .faculty-card select {
         grid-column: 2;
-        grid-row: 1;
+        grid-row: 1 / 3;
         margin-bottom: 0;
+        align-self: center;
       }
 
       .faculty-card .custom-expiry-btn-small {
         grid-column: 3;
-        grid-row: 1;
+        grid-row: 1 / 3;
         margin: 0;
+        align-self: center;
       }
 
       .faculty-card button:last-child {
         grid-column: 4;
-        grid-row: 1;
+        grid-row: 1 / 3;
         margin-bottom: 0;
+        align-self: center;
       }
     }
 
@@ -1417,7 +1426,6 @@
           if (batch) infoText += `Batch: ${batch}`;
 
           infoDiv.style.whiteSpace = "pre-line"; // This allows line breaks to render
-          infoDiv.textContent = infoText;
           label.appendChild(infoDiv);
         }
         // --- End block ---
